--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^1.0.2",
-    "firebase": "4.5.0",
+    "firebase": "^4.12.1",
+    "firebaseui": "^2.7.0",
     "nuxt": "^1.0.0-rc11",
     "vuetify": "^0.15.7"
   },
