--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "fdeploy": "yarn build && firebase deploy"
   },
   "dependencies": {
-    "@nuxtjs/pwa": "^1.0.2",
+    "@nuxtjs/pwa": "^2.0.8",
     "firebase": "^4.12.1",
     "firebaseui": "^2.7.0",
-    "nuxt": "^1.0.0-rc11",
-    "vuetify": "^0.15.7"
+    "nuxt": "^1.4.0",
+    "vuetify": "^1.0.14"
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.2",
     "eslint": "^4.3.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-html": "^3.1.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "stylus": "^0.54.5",
